--- a/index.html
+++ b/index.html
@@ -30,11 +30,13 @@
 
 	<!-- Hero sekce s obrázkem a hlavním nadpisem -->
 	<div class="hero">
+		<div class="hero-text">
 		<h1>Sladké potěšení z&nbsp;kvalitních surovin</h1>
 
 		<p>
 			Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam.
 		</p>
+	</div>
 	</div>
 
 
@@ -48,11 +50,11 @@
 			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore.</p>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Doloribus officia minima reiciendis beatae, quo consequatur blanditiis molestiae laborum, at porro ipsum soluta temporibus.</p>
 
-			<a href="#">Naše výrobky</a>
+			<a class="button-vyrobky" href="#" >Naše výrobky</a>
 		</div>
 		<!-- pravý sloupec -->
 		<div class="welcome-right">
-			<img src="images/cukrarka.jpg" alt="cukrářka">
+			<img class="cukrarka" src="images/cukrarka.jpg" alt="cukrářka">
 		</div>
 	</section>
 
@@ -62,29 +64,34 @@
 		<h2>Dnešní nabídka</h2>
 		<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 
+		<div class="cakes">
 		<!-- produkt 1 -->
-		<div class="offer product1">
-			<img src="images/dort.jpg" alt="Šlehačkový dort s malinami">
+		<div class="cake product1">
+			<img class="photo-product1" src="images/dort.jpg" alt="Šlehačkový dort s malinami">
+
+			<div class="malinovy-dort">
 			<h3>Malinový dort</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+			</div>
 		</div>
 		<!-- produkt 2 -->
-		<div class="offer product2">
+		<div class="cake product2">
 			<img src="images/livance.jpg" alt="Lívance s ovocem">
 			<h3>Lívance s ovocem</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 		</div>
 		<!-- produkt 3 -->
-		<div class="offer product3">
+		<div class="cake product3">
 			<img src="images/kolac.jpg" alt="Dýňový koláč">
 			<h3>Dýňový koláč</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
 		</div>
 		<!-- produkt 4 -->
-		<div class="offer product4">
+		<div class="cake product4">
 			<img src="images/buchticka.jpg" alt="Buchtička s polevou">
 			<h3>Buchtička s polevou</h3>
 			<p>Lorem ipsum dolor sit amet consectetur adipisicing elit.</p>
+		</div>
 		</div>
 	</section>
 
@@ -110,8 +117,9 @@
 
 
 	<!-- Patička -->
+	<footer>
 		<p>©2020, Czechitas. Vytvořeno pro kurz Staň se kóderkou.</p>
-
+	</footer>
 
 
 </body>
